@@ -112,6 +112,17 @@ tr.edit td {background-color:#efefef;border-bottom:1px solid gray;}
 #b_console #console {color:white;background-color:black;width:80em;margin:20px 0;padding:4px;height:25em;overflow:scroll;border:4px solid gray;font-size:115%;font-family:monospace;}
 
 #main #cnav {width:21%;overflow:auto;}
+
+/* jquery filetree */
+#cat-tree {float:left;border:1px solid gray;padding:4px;margin:2px;width:20%;}
+.presults {width:76%;border-bottom:1px solid gray;margin:4px;}
+.presults td {border:1px solid gray;border-bottom:none;}
+.presults td.name {border-right:none;}
+.presults tr.odd td {background:#eee;}
+.presults .rnav td {padding-top:6px;text-align:right;}
+.presults .pno {padding-right:3px;}
+.presults .nin {padding:0 2px;}
+
 /*--------------------------------------------------|
 | dTree 2.05 | www.destroydrop.com/javascript/tree/ |
 |---------------------------------------------------|
