@@ -10,6 +10,8 @@ Release 0.8.7
   sitting in a zen-cart folder; required deleting the file manually
 - properly populate a products status (changed to boolean)
 - add parameter to allow to query all products (ignoring the status)
+- make zm_href() and zm_secure_href() work in admin pages
+- add simple zm_product_resultlist() admin function for plugins to use
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
